# flax-mnist

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
conf/: config.yaml
flax_mnist/: conf.py  main.py
